c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_lex/missing_negative_exponent.c
int main(void) {
    /* The exponent on a floating-point constant must be an integer,
     * not just a negative sign.
     */
    double foo = 24e-;
}